# merchant-copilot

./: .gitignore  CLAUDE.md  DEMO_GUIDE.md  PITCH.md  README.md  STRIDE_SPEC.md  app.py  architecture.html  auth_agent.py  bandit_state.json  context_graph.json  environment.py  generate_architecture.py  generate_product_doc.py  live_scraper.py  main.py  memory_agent.py  payment_agent.py  pyproject.toml  requirements.txt  reward.py  rl_bandit.py  run_loop.py  run_results.json  shopping_agent.py  x402_server.py
.claude/: settings.json
.streamlit/: config.toml
docs/: product_documentation.docx
mock_pages/: bad_shopify_seller.md  target_goodfellow_shirt.md  target_method_hand_soap.md
