[project]
name = "merchant-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.100.0",
    "beautifulsoup4>=4.14.3",
    "firecrawl-py>=4.26.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "uvicorn>=0.46.0",
    "x402[evm,fastapi,httpx]>=2.10.0",
]
